# ponyfetch

./: Cargo.toml  README.md  install.bat  install.sh
.github/workflows/: autopublic.yml  rust.yml
ponies/: applejack_large.txt  celestia.txt  celestia_large.txt  derpy_large.txt  fluttershy.txt  fluttershy_large.txt  luna_large.txt  mcintosh_large.txt  pinkiepie_large.txt  rainbowdash.txt  rainbowdash_large.txt  rarity.txt  twilight.txt  twilight_large.txt
src/: args.rs  main.rs  system.rs
src/helpers/: arguments.rs  colors.rs  console.rs  file.rs  mod.rs  paths.rs  ponies.rs  print.rs
src/system/: host.rs  mod.rs  net.rs  specs.rs
