[package]
name = "ponyfetch"
description="A cross-platform command-line interface (CLI) tool written in Rust to display system information in an aesthetically pleasing and entertaining manner. "
version = "0.2.0"
authors=["Atsukoro1"]
license = "MIT"
categories=["command-line-utilities"]
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "ponies/*"
]

[dependencies]
kernel32-sys = "0.2.2"